tests/instantiating/negative_array_size/stderr.golden
error: functionality 's' has negative array size -1
bus.fbd +2:3
   |
 2 |   s [-1] status
   |   ^
